<resources>
    <string name="app_name">DatabindingExample</string>
    <string name="mvvm">MVVM</string>
    <string name="mvp">MVP</string>
    <string name="main_text_explanation">Welcome to the my DatabindingExample application. Each button below will take you to a different version of the same example To-Do List application. One was created using the MVP pattern, while the other was created using MVVM. Hopefully, this will help illustrate the differences between them.</string>
    <string name="to_do">To-Do:</string>
    <string name="add_todo">Add Todo</string>
    <string name="how_you_do_your_to_do">How you do your to do?</string>
    <string name="when_to_do">When to do?</string>
    <string name="what_to_do">What to do?</string>
</resources>
