<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/what_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/what_to_do"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/when_text_input"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/when_to_do"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/how_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/how_you_do_your_to_do"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_todo"/>
</LinearLayout>